--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,5 +1,8 @@
 .main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
+  box-sizing: border-box;
+  max-width: 1280px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
 }
