--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,8 +1,12 @@
+.app {
+  height: 100vh;
+}
+
 .main {
-  box-sizing: border-box;
-  max-width: 1280px;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  max-width: 1280px;
+  height: calc(100% - 88px);
+  box-sizing: border-box;
   gap: 40px;
 }
