--- a/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -3,6 +3,14 @@
 }
 
 .list {
-  max-height: 664px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   overflow-y: scroll;
+}
+
+.section {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
 }
