--- a/src/components/header-menu/header-menu.module.css
+++ b/src/components/header-menu/header-menu.module.css
@@ -6,9 +6,9 @@
     gap: 8px;
   }
   
-  .item {
+  .link {
     display: flex;
     align-items: center;
     gap: 8px;
-    cursor: pointer;
+    text-decoration: none;
   }
