--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -13,13 +13,10 @@
     0px 0px 1px rgba(0, 0, 0, 0.04);
 }
 
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.close {
+.buttonClose {
+  position: absolute;
+  top: 60px;
+  right: 40px;
   padding: 0;
   margin: 0;
   border: none;
