feat: Добавить модальные окна и функциональность вебсокета

--- a/src/pages/profile-page/profile-page.module.css
+++ b/src/pages/profile-page/profile-page.module.css
@@ -3,10 +3,14 @@
   max-width: 1280px;
   display: flex;
   box-sizing: border-box;
+  height: 100%;
+  height: calc(100% - 88px);
 }
 
 .columns {
   display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .description {
