--- a/src/components/feed-card/feed-card.module.css
+++ b/src/components/feed-card/feed-card.module.css
@@ -24,30 +24,6 @@
   align-items: center;
 }
 
-.ingredients {
+.icons {
   display: flex;
-}
-
-.icon_wrapper {
-  margin-left: -16px;
-  position: relative;
-  width: 64px;
-  height: 64px;
-  border-radius: 100%;
-  background: linear-gradient(63.18deg, #801AB3 0%, #4C4CFF 100%);
-}
-
-.icon_wrapper:first-child {
-  margin-left: 0;
-}
-
-.icon {
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 100%;
-  background-color: var(--background-alt);
 }
